[package]
name = "classicube-toolgun-plugin"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = { version = "1.0.89", features = ["backtrace"] }
approx = "0.5.1"
byteorder = "1.5.0"
classicube-helpers = { git = "https://github.com/SpiralP/rust-classicube-helpers.git" }
classicube-sys = "3"
nalgebra = "0.33.0"
nalgebra-glm = "0.19.0"
rodio = { version = "0.19.0", default-features = false, features = ["wav"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[build-dependencies]
classicube-sys = "3"
png = "0.17.13"


[package.metadata.release]
pre-release-commit-message = "Release {{version}}"
tag-message = "Release version {{version}}"
