[package]
name = "classicube-toolgun-plugin"
version = "0.2.0"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = { version = "=1.0.102", features = ["backtrace"] }
approx = "=0.5.1"
byteorder = "=1.5.0"
classicube-helpers = { git = "https://github.com/SpiralP/rust-classicube-helpers.git" }
classicube-sys = "=5.0.0"
nalgebra = "=0.34.2"
nalgebra-glm = "=0.20.0"
rodio = { version = "=0.22.2", default-features = false, features = ["wav"] }
tracing = "=0.1.44"
tracing-subscriber = { version = "=0.3.23", features = ["env-filter"] }

[build-dependencies]
classicube-sys = "=5.0.0"
png = "=0.18.1"
